<resources>
    <string name="app_name">Culture Vultures</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_profile_picture">Set New Profile Picture</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_post">New Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_image">Select Image</string>
    <string name="post_description">Post Description:</string>
    <string name="upload">Upload</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
