<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="24dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo_black"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/accentText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="4dp"
            android:hint="@string/username"
            android:nextFocusDown="@id/edit_text_email"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textColorHint="@color/common_google_signin_btn_text_light" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="4dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_password"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textColorHint="@color/common_google_signin_btn_text_light" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pasword"
            android:drawablePadding="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/button_register"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textColorHint="@color/common_google_signin_btn_text_light" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="registerUser"
            android:textColor="@color/accentText" />

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/already_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:onClick="startSignInActivity"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

</RelativeLayout>