<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".EditProfileActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="signOut"
        android:text="@string/sign_out"
        android:textColor="#fff" />

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccentLight"
        android:gravity="center"
        android:onClick="pickImage"
        android:text="@string/set_profile_picture"
        android:textColor="@color/accentText"
        android:textSize="12sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccentLight"
        android:gravity="center"
        android:onClick="uploadFile"
        android:text="@string/upload"
        android:textColor="@color/accentText"
        android:textSize="12sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Bio:"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/bio_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                android:maxLength="500"
                android:minLines="7" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccentLight"
            android:gravity="center"
            android:onClick="uploadBio"
            android:text="@string/upload"
            android:textColor="@color/accentText"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/design_default_color_error"
            android:onClick="cancelChange"
            android:text="@string/cancel"
            android:textColor="#fff" />

    </RelativeLayout>

</LinearLayout>